--- a/provisioning/playbook.yml
+++ b/provisioning/playbook.yml
@@ -33,6 +33,7 @@
           - hwloc # provides lstopo-no-graphics
           - numactl 
           - perf
+          - strace
 
     - name: uninstall firewalld
       yum:
